unpackaged/main/default/objects/nbavs__Session__c/nbavs__Session__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Session Deprecated</label>
</CustomObject>