unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__AccessToken__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AccessToken__c</fullName>
    <label>AccessToken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>