unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__AvailabilityLogJobId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AvailabilityLogJobId__c</fullName>
    <label>AvailabilityLogJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>