unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__AvailabilityLogLastTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AvailabilityLogLastTime__c</fullName>
    <label>AvailabilityLogLastTime</label>
    <type>DateTime</type>
</CustomField>