unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__CallQueueLogLastTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallQueueLogLastTime__c</fullName>
    <label>CallQueueLogLastTime</label>
    <type>DateTime</type>
</CustomField>