unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__Expires__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Expires__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>