unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__InsightsLogLastTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__InsightsLogLastTime__c</fullName>
    <label>InsightsLogLastTime</label>
    <type>DateTime</type>
</CustomField>