unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RefreshToken__c</fullName>
    <label>RefreshToken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>