unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__Scope__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Scope__c</fullName>
    <label>Scope</label>
    <length>64</length>
    <type>Text</type>
</CustomField>