unpackaged/main/default/objects/nbavs__Session__c/fields/nbavs__TokenType__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TokenType__c</fullName>
    <label>TokenType</label>
    <length>32</length>
    <type>Text</type>
</CustomField>